--- a/pages/index.html
+++ b/pages/index.html
@@ -57,9 +57,9 @@
 
     <section class="servicos" id="servicos">
 
-      <div class="container-svg">
-        <img src="../assets/icons/setaBaixo.svg" alt="Ícone de uma seta apontando para baixo" class="svgSeta"> 
-      </div>
+      <a href="#servicos" class="container-svg">
+        <img src="../assets/icons/setaBaixo.svg" alt="Rolar para a seção de serviços">
+      </a>
 
       <h2 class="textoServico">Alguns serviços</h2>
       
