--- a/pages/index.html
+++ b/pages/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="UTF-8">
+ <link rel="icon" type="image/svg+xml" href="../assets/icons/favicon-milenium.svg">
   
   <title>Milenium - Soluções em Painéis Elétricos</title>
 
@@ -23,7 +24,6 @@
       <div class="nav-links" id="navLinks">
         <a href="#textos-1">Sobre</a>
         <a href="#servicos">Serviços</a>
-        <a href="#produtos">Produtos</a>
         <a href="#faq">Fornecedores</a>
         <a href="#contato">Contato</a>
       </div>
@@ -31,6 +31,13 @@
   </header>
 
   <main> 
+
+    <a href="https://wa.me/5571992431251?text=Olá!%20Gostaria%20de%20falar%20com%20a%20Milenium%20Quadros%20Elétricos." 
+    class="btn-whatsapp" target="_blank" rel="noopener noreferrer" aria-label="Fale conosco pelo WhatsApp">
+    <img src="../assets/icons/icon-whatsapp2.svg" alt="Ícone do WhatsApp" class="icone-whatsapp">
+</a>
+
+
     <div class="backgroundInicial">
       <img src="../assets/backgroundImages/foto1.png" alt="" class="imgFundo">
       <div class="camadaVerde">
@@ -122,12 +129,12 @@
   <div class="parceiros-container">
   <div class="parceiros-scroll">
     <img src="../assets/partners/abb.svg" alt="Logo ABB">
-    <img src="../assets/partners/Danfoss.svg" alt="Logo Danfoss">
+    <img src="../assets/partners/Danfoss.svg" alt="Logo Danfoss" style="height: 70px;">
     <img src="../assets/partners/schneiderEletric.svg" alt="Logo Schneider Electric">
-    <img src="../assets/partners/siemens.svg" alt="Logo Siemens">
-    <img src="../assets/partners/soprano.svg" alt="Logo Soprano">
+    <img src="../assets/partners/siemens.svg" alt="Logo Siemens" style="height: 150px;">
+    <img src="../assets/partners/soprano.svg" alt="Logo Soprano" style="height: 100px;">
     <img src="../assets/partners/steck.svg" alt="Logo Steck">
-    <img src="../assets/partners/weg.svg" alt="Logo Weg">
+    <img src="../assets/partners/weg.svg" alt="Logo Weg" style="height: 50px;">
 
     <img src="../assets/partners/abb.svg" alt="Logo ABB">
     <img src="../assets/partners/Danfoss.svg" alt="Logo Danfoss">
@@ -144,7 +151,9 @@
 
   <footer id="contato">
     <!-- Botão CTA no topo do footer -->
-    <button class="footer-cta">Solicite seu orçamento!</button>
+     <a href="https://wa.me/5571992431251?text=Olá!%20Gostaria%20de%20falar%20com%20a%20Milenium%20Quadros%20Elétricos." target="_blank">
+        <button class="footer-cta">Solicite seu orçamento!</button>
+      </a>
     
     <div class="footer-content">
       <!-- Logo da empresa -->
