--- a/pages/index.html
+++ b/pages/index.html
@@ -24,7 +24,7 @@
       <div class="nav-links" id="navLinks">
         <a href="#textos-1">Sobre</a>
         <a href="#servicos">Serviços</a>
-        <a href="#faq">Fornecedores</a>
+        <a href="#parceiros-container">Fornecedores</a>
         <a href="#contato">Contato</a>
       </div>
     </div>
