--- a/pages/index.html
+++ b/pages/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="../styles/global.css">
   <link rel="stylesheet" href="../styles/layout.css">
 
-  <link rel="shortcut icon" href="../assets/icons/LOGO (1).svg" type="image/x-icon">
+  <link rel="shortcut icon" href="../assets/icons/favicon-milenium.svg" type="image/x-icon">
 </head>
 <body>
 
@@ -178,14 +178,15 @@
           <p>engenharia@mileniumquadros.com.br</p>
         </div>
         
-        <div class="localizacao">
-          <img src="../assets/icons/icon-location.svg" alt="Localização">
-          <p>Estrada Bahia feira nº58 km 9, Pirajá</p>
-        </div>
-
         <a href="https://www.instagram.com/mileniumquadros?igsh=c3Q0bzRodWplZTcw" target="_blank" class="instagram-logo">
           <img src="../assets/icons/icon-instagram.svg" alt="Instagram Milenium">
+          <p>@mileniumquadros</p> 
         </a>
+
+        <div class="localizacao">
+          <img src="../assets/icons/icon-location.svg" alt="Localização">
+          <p> Rua Barão de Cotegipe - Calçada, Salvador - BA, 40301-155</p>
+        </div>
       </div>
 
       
