--- a/pages/faq1.html
+++ b/pages/faq1.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Milenium - Soluções em Painéis Elétricos</title>
+  <title>Milenium - Entrega dos Quadros Elétricos</title>
 
   <link rel="stylesheet" href="../styles/extras/colors.css">
   <link rel="stylesheet" href="../styles/extras/fonts.css">
@@ -18,7 +18,7 @@
   <link rel="stylesheet" href="../styles/global.css">
   <link rel="stylesheet" href="../styles/extras/responsive.css">
   
-  <link rel="shortcut icon" href="../assets/icons/LOGO (1).svg" type="image/x-icon">
+  <link rel="shortcut icon" href="../assets/icons/favicon-milenium.svg" type="image/x-icon">
 </head>
 <body>
 
@@ -39,6 +39,10 @@
   </header>
 
   <main> 
+    <a href="https://wa.me/5571992431251?text=Olá!%20Gostaria%20de%20falar%20com%20a%20Milenium%20Quadros%20Elétricos." 
+   class="btn-whatsapp" target="_blank" rel="noopener noreferrer" aria-label="Fale conosco pelo WhatsApp">
+   <img src="../assets/icons/icon-whatsapp2.svg" alt="Ícone do WhatsApp" class="icone-whatsapp">
+  </a>
     <div class="backgroundInicial">
       <img src="../assets/backgroundImages/foto3.png" alt="" class="imgFundo">
       <div class="camadaVerde">
@@ -59,7 +63,9 @@
 
   <footer id="contato" class="footer footer-faq">
     <!-- Botão CTA no topo do footer -->
-    <button class="footer-cta">Solicite seu orçamento!</button>
+    <a href="https://wa.me/5571992431251?text=Olá!%20Gostaria%20de%20falar%20com%20a%20Milenium%20Quadros%20Elétricos." target="_blank">
+        <button class="footer-cta">Solicite seu orçamento!</button>
+      </a>
     
     <div class="footer-content">
       <!-- Logo da empresa -->
@@ -84,13 +90,15 @@
           <p>engenharia@mileniumquadros.com.br</p>
         </div>
         
-        <div class="localizacao">
-          <img src="../assets/icons/icon-location.svg" alt="Localização">
-          <p>Estrada Bahia feira nº58 km 9, Pirajá</p>
-        </div>
-
         <a href="https://www.instagram.com/mileniumquadros?igsh=c3Q0bzRodWplZTcw" target="_blank" class="instagram-logo">
           <img src="../assets/icons/icon-instagram.svg" alt="Instagram Milenium">
+          <p>@mileniumquadros</p> 
+        </a>
+
+        <div class="localizacao">
+          <img src="../assets/icons/icon-location.svg" alt="Localização">
+          <p> Rua Barão de Cotegipe - Calçada, Salvador - BA, 40301-155</p>
+        </div>
         </a>
       </div>
 
