--- a/pages/index.html
+++ b/pages/index.html
@@ -40,7 +40,7 @@
 
     <div class="backgroundInicial">
       <img src="../assets/backgroundImages/foto1.png" alt="" class="imgFundo">
-      <div class="camadaVerde">
+      <div class="camadaVerde fundo-home">
         <div class="textos">
           <h1 class="textos-1" id="textos-1">Conectando hoje, energizando o amanhã!</h1>
           <p class="textos-2">
@@ -193,7 +193,7 @@
 
       <!-- Direitos autorais -->
       <div class="footer-direitos-autorais">
-        &copy; Millenium 2024. Todos os direitos reservados.
+        &copy; Millenium 2026. Todos os direitos reservados.
       </div>
     </div>
   </footer>
